--- a/biopython-notebook/Dockerfile
+++ b/biopython-notebook/Dockerfile
@@ -10,7 +10,7 @@ RUN pip3 install jupyter
 RUN mkdir scratch
 WORKDIR scratch
 ADD startup.sh /usr/bin/startup
-RUN chmod +x startup
+RUN chmod +x /usr/bin/startup
 ENV JUPYTER_USER=jupyter \
     JUPYTER_UID=1555 \
     JUPYTER_GID=1555 \
