--allow-external pil

--- a/biopython/Dockerfile
+++ b/biopython/Dockerfile
@@ -20,7 +20,8 @@ RUN apt-get clean
 # RUN pip3 install pip --upgrade
 RUN pip3 install rdflib --upgrade
 RUN pip3 install cython --upgrade
-RUN pip3 install numpy pil --upgrade
+RUN pip3 install numpy --upgrade
+RUN pip3 install pil  --allow-external pil --upgrade
 RUN pip3 install matplotlib --upgrade
 RUN pip3 install pandas --upgrade
 
