--- a/biopython-sql/Dockerfile
+++ b/biopython-sql/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get install -y --force-yes mysql-server python-mysqldb
 RUN apt-get install -y --force-yes python3-mysql.connector
 RUN apt-get clean
 
+RUN pip3 install psycopg2 --upgrade
+RUN pip3 install --allow-external mysql-connector-python mysql-connector-python --upgrade
 #Database servers
 RUN echo "host    all             all             ::1/128                 trust" > /etc/postgresql/9.4/main/pg_hba.conf
 RUN echo "service postgresql start" > .bashrc
