change to $JUPYTER_USER

--- a/biopython-notebook/Dockerfile
+++ b/biopython-notebook/Dockerfile
@@ -12,7 +12,7 @@ RUN mkdir scratch
 WORKDIR scratch
 ADD startup.sh /usr/bin/startup
 RUN chmod +x /usr/bin/startup
-ENV JUPYTER_USER=jupyter \
+ENV JUPYTER_USER=jupyteruser \
     JUPYTER_UID=1555 \
     JUPYTER_GID=1555 \
     JUPYTER_HOME=/scratch
