preparing to use the official docker hub repository

--- a/biopython-buildbot/Dockerfile
+++ b/biopython-buildbot/Dockerfile
@@ -1,4 +1,4 @@
-FROM tiagoantao/biopython-sql:latest
+FROM biopython/biopython-sql:latest
 MAINTAINER Tiago Antao <tra@popgen.net>
 
 ENV DEBIAN_FRONTEND noninteractive
