--- a/biopython-sql/Dockerfile
+++ b/biopython-sql/Dockerfile
@@ -1,4 +1,4 @@
-FROM tiagoantao/biopython:latest
+FROM biopython/biopython:latest
 MAINTAINER Tiago Antao <tra@popgen.net>
 
 ENV DEBIAN_FRONTEND noninteractive
