--- a/biopython-tutorial/Dockerfile
+++ b/biopython-tutorial/Dockerfile
@@ -4,3 +4,5 @@ MAINTAINER Tiago Antao <tra@popgen.net>
 ENV JUPYTER_HOME /scratch/biopython-notebook/notebooks
 
 RUN git clone https://github.com/tiagoantao/biopython-notebook.git
+
+WORKDIR /scratch/biopython-notebook/notebooks
