--- a/biopython-tutorial/Dockerfile
+++ b/biopython-tutorial/Dockerfile
@@ -3,6 +3,6 @@ MAINTAINER Tiago Antao <tra@popgen.net>
 
 ENV JUPYTER_HOME /scratch/biopython-notebook/notebooks
 
-CMD git clone https://github.com/tiagoantao/biopython-notebook.git
+RUN git clone https://github.com/tiagoantao/biopython-notebook.git
 
 WORKDIR /scratch/biopython-notebook/notebooks
